# remodex

./: .gitignore  CONTRIBUTING.md  README.md  justfile  run-local-remodex.sh
CodexMobile/CodexMobile.xcodeproj/: project.pbxproj
CodexMobile/CodexMobile/Models/: CodexRateLimitStatus.swift
CodexMobile/CodexMobile/Services/: CodexService+Connection.swift  CodexService+History.swift  CodexService+Incoming.swift  CodexService+IncomingAssistant.swift  CodexService+IncomingSupport.swift  CodexService+Messages.swift  CodexService+Review.swift  CodexService+Status.swift  CodexService+ThreadsTurns.swift  CodexService.swift
CodexMobile/CodexMobile/Views/Turn/: CommandExecutionViews.swift  ContextWindowProgressRing.swift  FileMentionChip.swift  SlashCommandAutocompletePanel.swift  TurnComposerCommandState.swift  TurnComposerHostView.swift  TurnComposerInputTextView.swift  TurnComposerView.swift  TurnComposerViewState.swift  TurnStatusSheet.swift  TurnTimelineView.swift  TurnToolbarContent.swift  TurnView.swift  TurnViewModel.swift
CodexMobile/CodexMobileTests/: CodexServiceIncomingCommandExecutionTests.swift  CodexStatusTests.swift  TurnComposerReviewModeTests.swift  TurnComposerSendAvailabilityTests.swift  TurnSlashCommandTokenTests.swift
Docs/: self-hosting.md
phodex-bridge/: Cargo.toml
phodex-bridge/scripts/: release.sh
phodex-bridge/src/: account_status.rs  bridge.js  bridge.rs  codex_transport.rs  config.rs  daemon_state.rs  desktop.rs  git_handler.rs  json_rpc.rs  macos_launch_agent.rs  main.rs  package_version_status.rs  push.rs  qr.rs  rollout-watch.js  rollout.rs  rollout_live_mirror.rs  secure_device_state.rs  secure_transport.rs  session_state.rs  voice.rs  workspace.rs
phodex-bridge/src/bridge/: account.rs  messages.rs  relay.rs  support.rs  thread_runtime.rs
phodex-bridge/src/rollout_live_mirror/: controller.rs  state.rs  translate.rs
phodex-bridge/test/: codex-desktop-refresher.test.js  rollout-watch.test.js
