[package]
name = "remodex"
version = "1.3.7"
edition = "2021"
authors = ["Praveen Perera"]
license = "ISC"
default-run = "remodex"

[[bin]]
name = "remodex"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.3"
dirs = "5.0.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures-util = "0.3.31"
hkdf = "0.12.4"
hostname = "0.4.0"
qrcode = "0.14.1"
rand = "0.8.5"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
time = { version = "0.3.41", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.20.0"
