[package]
name = "remodex"
version = "1.3.7"
edition = "2021"
authors = ["Praveen Perera"]
license = "ISC"
default-run = "remodex"

[[bin]]
name = "remodex"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
futures-util = "0.3.32"
hkdf = "0.13.0"
hostname = "0.4.2"
qrcode = "0.14.1"
getrandom = "0.4.2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "multipart", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
time = { version = "0.3.47", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
url = "2.5.8"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[dev-dependencies]
assert_cmd = "2.2.0"
tempfile = "3.27.0"
